simple-api/simple-api-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: api
  
---
apiVersion: v1
kind: Service

metadata:
  name: simple-api-svc
  namespace: api
  labels:
    app: simple-api
    
spec:
  selector:
    app: simple-api
  
  ports:
  - protocol: TCP
    name: http
    port: 8080
    # nodePort: 30001
    targetPort: http
  # type: NodePort


---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-api
  namespace: api    
  
  labels:
    app: simple-api
    
   
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-api
  template:
    metadata:
      
      labels:
        app: simple-api    
    spec:
      containers:
        - name: simple-api
          image: saturn203/simple-api:stable-1.0
          ports:
          - name: http
            containerPort: 8080
