simple-api/ingress-simple-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-api-ingress
  namespace: api
  annotations:
    kubernetes.io/ingress.class: nginx    
spec:
  rules:
  - host: "simple-api.3.39.19.175.sslip.io"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service: 
            name: simple -api-svc
            port: 
              number: 8080
